# imas-standard-interfaces

./: .coverage  .env  .gitignore  Geometry_Workplan.md  IMAS_Standard_Interfaces_Workplan.md  README.md  datatree_schema.md  docs.py  guidelines.md  mkdocs.yml  pyproject.toml  test_imports.py
.github/instructions/: geom.instructions.md  schema-development.instructions.md
.github/workflows/: docs.yml
definitions/pf_active/: coil-current.cdl  coil-geometry.cdl
definitions/tf_active/: coil-geometry.cdl
docs/: development.md  documentation-system.md  examples.md  index.md
docs/schemas/: coil-current.html  coil-geometry.html  polygon-geometry.html
schemas/base/: __init__.py  polygon-geometry.schema.json
schemas/pf_active/: coil-current.schema.json  coil-geometry.schema.json
schemas/tf_active/: coil-geometry.schema.json
scripts/: generate_docs.py
standard_interfaces/: __init__.py  _version.py  build.py  cdl_to_json_schema.py  definitions.py  generate_docs.py  resources.py  schema_access.py  schemas.py  validator.py
standard_interfaces/docs/: __init__.py  generate_docs.py  manage.py  serve.py
standard_interfaces/schemas/: __init__.py
standard_interfaces/schemas/tf_active/: coil-geometry.schema.json
tests/: README.md  __init__.py  conftest.py  test_coordinate_model.py  test_data_array_model.py  test_definitions.py  test_polygon_basic.py  test_polygon_geometry.py
